@@ -1,5 +1,6 @@
 20120807:
   + a better foolproof way to process the size of file
+  + video_media_on_canvas(): display combined bitrate by calculating it.
 
 20120807: V2.1.7
   + added a warning info about the internal field of file size. 
